--- a/config/application.yml
+++ b/config/application.yml
@@ -4,3 +4,4 @@
    mailgun_domain: 'sandboxcc6cca2b2d1049b4a6dc8e2f2757ddf5.mailgun.org'
    mailgun_username: 'postmaster@sandboxcc6cca2b2d1049b4a6dc8e2f2757ddf5.mailgun.org'
    mailgun_password: '5615a125e8ef7aea436e897598e22844'
+   filepicker_api_key: "AR0LrQ7ZBRbaL4HN6BMTDz" #A1lpZ89jLQx6BUl3E27JZz
